--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ button {
   cursor: pointer;
 }
 
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -46,7 +51,7 @@ button {
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
@@ -65,9 +70,12 @@ button {
 .header-item:not(:last-child) {
   margin-right: 40px;
 }
+.header-address {
+  margin-left: auto;
+}
 
 .header-logo {
-  color: var (--headers-color);
+  color: var(--headers-color);
   text-decoration: none;
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
@@ -124,23 +132,23 @@ button {
   background-color: var(--headers-color);
   padding-top: 188px;
   padding-bottom: 188px;
+  text-align: center;
 }
 .hero-title {
   max-width: 496px;
-  padding-top: 50px;
-  font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
   font-size: 56px;
-  line-height: 0.07px;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--hero-text-color);
 }
 .hero-btn {
-  display: block;
-  margin: 0 auto 48px auto;
   padding: 16px 32px;
   border-radius: 4px;
-
+  text-align: center;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -158,8 +166,6 @@ button {
 /* +++++++++++++++++++++++++++ADVANTAGES+++++++++++++++++++++  */
 .advntg-container {
   display: flex;
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 
 .advntg {
@@ -212,7 +218,6 @@ button {
 }
 .exm-title {
   margin-bottom: 72px;
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
   text-align: center;
@@ -232,12 +237,9 @@ button {
 
 .team {
   background-color: var(--text-for-logofooter-bg-ourteam-color);
-  padding-bottom: 120px;
 }
 .team-title {
-  padding-top: 120px;
   padding-bottom: 72px;
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
   text-align: center;
@@ -253,12 +255,14 @@ button {
   padding-bottom: 32px;
   border: 1px solid #e7e9fc;
   border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
 }
 
 .team-img {
   margin-bottom: 32px;
 }
 .team-item-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -266,7 +270,6 @@ button {
   letter-spacing: 0.02em;
 }
 .team-item-p {
-  margin-top: 8px;
   color: var(--text-for-p-color);
   font-weight: 400;
   font-size: 16px;
@@ -276,12 +279,11 @@ button {
 }
 
 /* FOOTER*/
-.footer-container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
+
 .footer {
   background-color: var(--headers-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-p {
@@ -293,7 +295,7 @@ button {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
@@ -315,6 +317,8 @@ button {
 
 /*  PORTFOLIO HTML  */
 .smain {
+  padding-top: 96px;
+  padding-bottom: 120 px;
 }
 .smain-title-hidden {
   position: absolute;
@@ -330,13 +334,14 @@ button {
 }
 .smain-list {
   justify-content: center;
-  padding-top: 96px;
-  padding-bottom: 72px;
   display: flex;
+  margin-bottom: 72px;
+}
+.smain-list-item {
+  margin-right: 24px;
 }
 
 .smain-button {
-  margin-right: 24px;
   min-width: 69px;
   min-height: 48px;
   padding: 12px 24px;
@@ -351,6 +356,7 @@ button {
   color: var(--logo-button-color);
 }
 
+.smain-button:hover,
 .smain-button:active,
 .smain-button:focus {
   background-color: var(--hoover-color);
@@ -366,26 +372,26 @@ button {
   display: flex;
   flex-wrap: wrap;
 }
-.smain-item {
-  width: 360px;
-  margin-right: 24px;
-  margin-bottom: 48px;
+
+.cards {
+  padding-bottom: 32px;
   border: 1px solid #e7e9fc;
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 32px;
+  margin-right: 24px;
+  margin-bottom: 48px;
+  padding-left: 16px;
+}
+.smain-item {
+  width: 360px;
 }
 
-.smain-item:nth-child(3n) {
-  margin-right: 0px;
-}
 .smain-item:nth-last-child(-n + 3) {
-  margin-bottom: 120px;
+  padding-bottom: 120px;
 }
 .smain-item:last .smain-item:hover {
 }
 
 .smain-title {
-  margin-left: 16px;
   margin-top: 32px;
   font-weight: 500;
   font-size: 20px;
@@ -393,7 +399,6 @@ button {
   letter-spacing: 0.02em;
 }
 .smain-p {
-  margin-left: 16px;
   margin-top: 8px;
   color: var(--text-for-p-color);
   font-weight: 400;
