--- a/css/styles.css
+++ b/css/styles.css
@@ -372,11 +372,10 @@ button {
 }
 
 .cards {
-  padding-bottom: 32px;
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-radius: 0px 0px 4px 4px;
   width: 360px;
-  padding-left: 16px;
 }
 .smain-item {
   width: 360px;
